--- a/pagina-proa/servidor/package.json
+++ b/pagina-proa/servidor/package.json
@@ -8,9 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "14.2.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "next-auth": "^5.0.0"
+    "next": "^14.2.32",
+    "next-auth": "^4.24.7",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   }
 }
